--- a/test/test_index.html
+++ b/test/test_index.html
@@ -110,6 +110,7 @@
         <div class="cards-row">
 
             <!-- 左の裏カード + 新規 -->
+            <!-- 左の裏カード + 新規 -->
             <div class="card-wrapper">
                 <div class="card">
                     <img src="https://deckofcardsapi.com/static/img/back.png">
